# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: check_work.yml
gendiff/: __init__.py  build_diff.py  check_files.py  cli.py  date_prepare.py  diff_files.py  files.py  parser.py
gendiff/formats/: __init__.py  json_formatter.py  plain_formatter.py  stylish_formatter.py  to_json.py  to_plain.py  to_stylish.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  test_build_diff.py  test_cli.py  test_date_prepare.py  test_diff_files.py  test_files.py
tests/fixtures/: expected_diff.txt  expected_output.txt  expected_output_json.txt  expected_output_plain.txt  expected_output_stylish.txt  fixture_test_diff_files.py
