[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff package."
authors = ["Alexander & Ludmila Markiza <alarriva@yandex.ru>"]
repository = "https://github.com/AlexanderLarriva/python-project-50.git"
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AlexanderLarriva/python-project-50"
"Bug Tracker" = "https://github.com/AlexanderLarriva/python-project-50/issues"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
